# ai-research-portfolio

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: import.yml  tests.yml
docs/: agent-investment-sample.md  data-availability.md  deepgelob.md  lob-reproduction.md  research-agent.md
examples/: run_langgraph_agent.py  run_lob_smoke_test.py  run_research_agent.py
paper/: README.md
src/ai_research_portfolio/: __init__.py
src/ai_research_portfolio/lob_models/: __init__.py  baselines.py  deepgelob.py  evaluation.py  labels.py  synthetic.py
src/ai_research_portfolio/research_agent/: __init__.py  adapters.py  langgraph_adapter.py  models.py  workflow.py
tests/: test_deepgelob.py  test_langgraph_adapter.py  test_lob_baselines.py  test_research_agent.py
