[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-portfolio"
version = "0.1.0"
description = "Reproducible LOB research and a human-in-the-loop research agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dedong Peng" }]
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
]

[project.optional-dependencies]
agent = [
  "langgraph>=0.2",
  "typing-extensions>=4.9",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

